Fxining wrong data sturcture for returned anser which broke the plugin
